# qt_await

./: .gitignore  README.md  demo.py  pyproject.toml  test_qt_await.py
.github/workflows/: test.yml
qt_await/: __init__.py  core.py  utils.py
